#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.41 released.

        * Makefile.PL substantially modified with latest
          version of Module::Install.

        * Build.PL removed

        * Makefile.PL modified to accomodate stand-alone
          Windows exe installer.

        * Returns content on both STDOUT and STDERR when
          content exists on both


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.40 released.

        * 'Finally' got gpg signature working again

        * Modifed Makefile.PL to enable users to automatically
          install Cygwin when Windows is detected. This now
          works.


2010-09-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.39 released.

        * Changed install to include latest Module::Install

        * Added option to install Cygwin when Windows is
          detected and FullAuto install is not running in
          Cygwin bash environment


2010-08-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.38 released.

        * Implemented 'unattended' mode in conjunction with
          changes to Term::Menus. Menus can now be used in
          FullAuto and when Default selections are set, Fullauto
          can be run 'unattended' in schedulers, and where a
          Menu would ususally great a user, the Default selections
          will be used.


2010-08-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.37 released.

        * &sendemail() now has better error reporting.

        * improved output parser to better detect stderr