@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 661e167985d4462642587448bc38a7c13fade8e0 ChangeLog
+SHA1 690990e20ff100545ae087fe46e6df88f368b016 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 ae7db7924514d4cdaa4b65406dc1e5f6b7f61dbd META.yml
-SHA1 6cbb3315c94d19ccc95dfea6fd0b5e2889a1f0de Makefile.PL
+SHA1 481cb68f2d7f63e5fbf44a642f09a714d8f944e0 META.yml
+SHA1 dbfae938f686287f25a9506586d738762aad9e25 Makefile.PL
 SHA1 8af1a79720895de6dd7dc0f88ed6e07c20e84f2d README
-SHA1 e35a6b8211b5545bb456da0049135608b77ad112 bin/fullauto.pl
+SHA1 667396e24a7f2b7f064b9b0995e363d653986812 bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
 SHA1 ca13d9875e1249f6e84f7070be8152c34837955e inc/Module/Install/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 7d7df796a9206d1e28924f74a14cd75f34f943c5 lib/Net/FullAuto.pm
+SHA1 e355c1a900e9dc426802d1efec90469123a6de01 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 c312c49b9b45e407e8deb9b4703e5c2aa8e71fc3 lib/Net/FullAuto/Distro/fa_code.pm
@@ -41,13 +41,13 @@ SHA1 c4c9133e17f1b8dcbd352a15717478c75684e469 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 de4dcc81108393e77dacd2f131e7513956d79b8b lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 8bf3902c4ee7bad312fc9c7d11de8e8578b472ec lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 23e8ebc4ed61ba4c578504c9b440c86889626e2f lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 2d2efaa36a852413d29320efe1cd97af046ce159 lib/Net/FullAuto/FA_Core.pm
+SHA1 46bb10c9a7af03f5dd6a697f933b1f36eae404c6 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkyH+1IACgkQdsVAdUjO9IloZQCghAICuEDEfUDAQR/NK3knymOm
-j3oAn15ypOrjsd0s/DBBEmqGEJ23TbQ6
-=ueqO
+iEYEARECAAYFAkyL7fAACgkQdsVAdUjO9Il1XACdEtfvdJwDZugSZEODtUD5p9cX
+5/IAn1gR/2NZtHNOVVR9HQu/nmNLKUL0
+=Zm+/
 -----END PGP SIGNATURE-----
